cmake_minimum_required(VERSION 3.14)
project(kiwisdr_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(kiwisdr INTERFACE)
target_include_directories(kiwisdr INTERFACE include)
add_executable(test_kiwisdr tests/test_kiwisdr.cpp)
target_link_libraries(test_kiwisdr kiwisdr)
enable_testing()
add_test(NAME kiwisdr COMMAND test_kiwisdr)
